<resources>
    <string name="app_name">QuestionBook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--@layout/fragment_category.xml -->


    <!--@MainActivity menu key-->
    <string-array name="side_menu_keys">
        <item name="side_menu_key_holder">SIDE_MENU_TO_HOLDER</item>
        <item name="side_menu_key_game">SIDE_MENU_TO_GAME</item>
        <item name="side_menu_key_statistics">SIDE_MENU_TO_STATISTICS</item>
        <item name="side_menu_key_history">SIDE_MENU_TO_HISTORY</item>
        <item name="side_menu_key_garbagecan">SIDE_MENU_TO_GARBAGE_CAN</item>
    </string-array>

    <!--  -->
    <string name="quiz_label">問題</string>
    <string name="details_label">詳細</string>
    <string name="accuracy_rate">解答率</string>

    <!-- recycle item  -->
    <!-- category -->
    <string name="item_category_workbook_label">問題集</string>
    <!-- workbook -->
    <string name="item_workbook_leafs">出題数</string>
    <string name="item_workbook_accuracy_max">最大正解率</string>
    <!-- leaf  -->
    <string name="item_leaf_statement">問題集</string>
    <string name="item_leaf_answer_first">選択案1</string>
    <string name="item_leaf_answer_second">選択案2</string>
    <string name="item_leaf_answer_third">選択案3</string>
    <string name="item_leaf_answer_right">正解</string>
    <string name="item_leaf_btn_update">修正</string>
    <string name="item_leaf_select_answer">選択した解答</string>
    <string name="item_leaf_page">ページ</string>


    <!-- TODO: Remove or change -->
    <string name="laboratory_category_btm">カテゴリーの追加</string>
    <string name="laboratory_workbook_btm">問題集の追加</string>
    <string name="laboratory_problem_btm">テキストの追加</string>

    <!--snackBar show-->
    <string name="snackbar_holder_msg">ホルダー</string>
    <string name="snackbar_laboratory_msg">ラボ</string>
    <string name="snackbar_statistics_msg">統計</string>
    <string name="snackbar_game_msg">クイズゲーム</string>
    <string name="snackbar_history_msg">ヒストリー</string>
    <string name="snackbar_garbagecan_msg">ゴミ箱</string>

    <!-- dialog  -->
    <string name="dialog_category_title">カテゴリーの追加</string>
    <string name="dialog_category_update">カテゴリーの変更</string>
    <string name="dialog_workbook_title">タイトル</string>
    <string name="dialog_leaf_insert_title">リーフの追加</string>
    <string name="dialog_leaf_updata_title">リーフの変更</string>
    <string name="dialog_negative_button">キャンセル</string>
    <string name="dialog_positive_button">次へ</string>
    <string name="dialog_insert_button">追加</string>
    <string name="dialog_update_button">変更</string>

    <!-- result_item.xml -->
    <string name="result_item_select_answer">選択した解答</string>
    <string name="result_item_right_answer">問題の解答</string>

    <!--statistics_fragment -->
    <string name="statistics_text">問題集全体平均解答率割合</string>

    <!-- GarbageCan   -->
    <string name="garbage_can_category_button_text">カテゴリー削除候補一覧へ</string>
    <string name="garbage_can_workbook_button_text">問題集削除候補一覧へ</string>
    <string name="garbage_can_leaf_button_text">問題文削除候補一覧へ</string>
    <string name="garbage_can_button_delete">削除</string>
    <string name="garbage_can_button_return">戻す</string>
    <string name="garbage_can_negative_button">キャンセル</string>
    <string name="delete_message">本当に削除しますか？</string>
    <!-- エラーメッセージ   -->
    <string name="error_dialog_category_0001">すでにそのタイトルは存在します</string>
    <string name="error_dialog_category_0002">ゴミ箱にあるタイトルと重複してます</string>

    <!-- 各フラグメントのタイトル表示 -->
    <string name="title_category">カテゴリー</string>
    <string name="title_workbook">ブック</string>
    <string name="title_leaf">リーフ</string>
    <string name="title_data">データ</string>
    <string name="title_history">ヒストリー</string>
    <string name="title_garbage_can">ゴミ箱</string>
    <string name="title_game">クイズ</string>
    <string name="title_result">リザルト</string>
    <string name="title_details">詳細</string>

</resources>